[package]
name = "blockchain_builder_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"  # or the latest version available
chrono = "0.4"  # for timestamping blocks
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
